# webxiangpianbu

./: .dockerignore  .editorconfig  .gitignore  .pylintrc  AUTHORS  Dockerfile  README  README.md  config.php  docker-compose.yml  feed.php  gallery.js  gallery.php  gallery.xsd  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: docker-publish.yml  pr-checks.yml  vrt-checks.yml
conf/docker/: entrypoint.sh
conf/docker/etc/: supervisord.conf
conf/docker/etc/nginx/sites-enabled/: default
locale/pl/LC_MESSAGES/: django.po
run/: settings_docker.py
run/albums/: album-one.json  index.json
run/nginx/templates/: default.conf.template
scripts/: build-docker-platform.sh  build-docker-platforms.sh  build-docker.sh  vrt-baseline.sh  vrt-docker.sh  vrt-make-settings.py  vrt.Dockerfile  vrt.sh
tests/: conftest.py  test_templatetags.py  test_tools.py  test_urls.py  test_views.py  test_webxiang_data.py
tests/e2e/: __init__.py  conftest.py  test_browser_flows.py  vrt.py
tools/: convert.py  generate.py  staticgen.py
webxiang/: settings-sample.py  settings_ci.py  settings_sample.py  typing.py  urls.py  urls_static.py  views.py  webxiang.py  wsgi.py  wsgi.virtualenv.py
webxiang/locale/pl/LC_MESSAGES/: django.po
webxiang/static/css/: base.css  light.css  photo.css
webxiang/static/js/: gallery.js
webxiang/templates/: 404.html  500.html  base.html  default.html  floating.html  photo.html  story.html
webxiang/templatetags/: embed.py  page.py
webxiang/tools/: convert.py  generate.py
