[project]
name = "WebXiangpianbu"
version = "0.1.0"
description = "A photo album organizer"
authors = [{ name = "WAP" }]
requires-python = ">=3.11,<4"
dependencies = [
    "django>=5,<6",
    "django-pipeline==4.1.0",
    "libsasscompiler==0.1.8",
    "pillow>=12,<13",
    "pyyaml==6.0.3",
    "gunicorn>=25,<26",
    "pymemcache>=4.0.0,<5",
]

[dependency-groups]
dev = [
    "django-stubs-ext==6.0.2",
    "django-stubs[compatible-mypy]==6.0.2",
    "mypy>=1,<2",
    "playwright",
    "pytest>=9,<10",
    "pytest-django>=4,<5",
    "ruff>=0.14.9",
    "ty>=0.0.24",
    "types-pyyaml==6.0.12.20260408",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["webxiangpianbu"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
plugins = ["mypy_django_plugin.main"]
exclude = '(?x)^(run/vrt-uv-cache/|run/vrt-venv/|run/vrt-home/)'

[tool.django-stubs]
django_settings_module = "webxiang.settings_ci"

[tool.ruff.format]
quote-style = "single"
